--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./todo.js"></script>
+    <script defer src="./todo.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto+Mono:wght@600&display=swap" rel="stylesheet">
@@ -14,17 +14,28 @@
 
 <body>
 <header class= "header">
-    <h1>To Do List</h1>
-    <input type="text" id="inputList" class="inputList" placeholder="Add an item..." oninput="">
-    <button class="addButton" class="addButton" alt="Add button" onclick="">Add</button>
+    <h1>To Do List</h1> 
+    <div class="clear">
+        <i class="refresh-icon">Refresh</i>
+    </div>
+    <div id="date"></div>
+    <div class="add-to-do">
+        <button class="addButton" class="addButton" alt="Add button" onclick="addItemButtonClick()">Add</button>
+        <input type="text" id="input" class="input" placeholder="Enter an item...." oninput="">
+    </div>
 </header> 
 
-<div class="containerList">
-    <div class="listItem">
-        <input type="text" class="item" value="Go for a run">
-        <button class="editButton" onclick="">Edit</button>
-        <button class="removeButton" onclick="">Remove</button>
-    </div>
+<div class="content">
+    <ul id="list">
+        <!-- /* this will be added with JS */  -->
+        <!-- <li class="item">
+            <button class="checkBox" job="complete" id="0" onclick="">O</button>
+            <input type="text" class="text" value="Go for a run">
+            <button class="removeButton" job="delete" id="0" onclick="">Remove</button>  
+        </li> -->
+
+    </ul>
+    
 </div>
 
 
