Added completeToDo and removeToDo function
- completeToDo function to toggle check and uncheck & line through styling. Then made done property change between true and false to update store and apply correct styling
- removeToDo function, targetted parentElement using onClick to remove whole of list class. Assigned bin property to true.

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <ul id="list">
         <!-- /* this will be added with JS */  -->
         <!-- <li class="item">
-            <button class="checkBox" job="complete" id="0" onclick="">O</button>
+            <button class="checkBox" id="0" onclick="">O</button>
             <input type="text" class="text" value="Go for a run">
-            <button class="removeButton" job="delete" id="0" onclick="">Remove</button>  
+            <button class="removeButton" id="0" onclick="">Remove</button>  
         </li> -->
 
     </ul>
